--- a/01-project-weather-app/index.html
+++ b/01-project-weather-app/index.html
@@ -7,7 +7,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
-    <title>Document</title>
+    <title>Weather App</title>
 </head>
 
 <body>
