--- a/02-project-QR-Code-Generator/index.html
+++ b/02-project-QR-Code-Generator/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Qr Code Generator</title>
 </head>
+
 <body>
-    
+
+    <main>
+        <h1>Enter Your Text Or Url</h1>
+        <input type="text" placeholder="Text or Url" id="qrText">
+        
+        <div id="imgBox">
+            <img src="" id="qrImg">
+        </div>
+        <button onclick="generateQR()">Generate Qr Code</button>
+    </main>
+
+    <script src="js/script.js"></script>
 </body>
+
 </html>
