--- a/03-project-Chatbot/index.html
+++ b/03-project-Chatbot/index.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="icon/invader-solid-36.png" type="image/x-icon">
     <title>Chatbot</title>
 </head>
-<body>
 
+<body>
+    <div >
+        <h1>AI CHATBOT</h1>
+    </div>
+    <div class="arrow">
+        <i class='bx bx-right-arrow-alt'></i>
+    </div>
+    <button class="chatbot-toggler">
+        <span><i class='bx bxs-message-dots'></i></span>
+        <span><i class='bx bx-x'></i></span>
+    </button>
+    <div class="chatbot">
+        <header>
+            <h2>Chatbot</h2>
+            <span><i class='close-btn  bx bx-x'></i></span>
+        </header>
+        <ul class="chatbox">
+            <li class="chat incoming">
+                <span><i class='bx bxs-invader'></i></span>
+                <p>Hi there 👋 <br> How can i help you today?</p>
+            </li>
+        </ul>
+        <div class="chat-input">
+            <textarea placeholder="Enter a message..." required></textarea>
+            <span id="send-btn"><i class='bx bx-send'></i></span>
+        </div>
+    </div>
 
 
 
@@ -19,4 +47,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
